--- a/php/all.html
+++ b/php/all.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>PHP all</title>
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>PHP all</title>
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" type="text/css" href="../theme/bootstrap/css/bootstrap.css">
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
-	</head>
-	<body>
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<h1 class="text-center">PHP all</h1>
-					<div id="toc"></div>
+	<!-- TOC -->
+	<link rel="stylesheet" type="text/css" href="../theme/toc/css/css.css">
+</head>
 
-
-
-					<h2>php.ini</h2>
-<pre>
+<body data-spy="scroll" data-target="#toc">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				<h1 class="text-center">PHP all</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
+				<div id="toc" data-spy="affix" data-offset-top="0" data-offset-bottom="0"></div>
+			</div>
+			<div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+				<h2>php.ini</h2>
+				<pre>
 upload_max_filesize = 10M
 max_file_uploads = 20
 post_max_size = 210M
 </pre>
-<pre>sudo service apache2 restart</pre>
-
-					<h2>Функции</h2>
-					<h3>iconv - изменение кодировки строки</h3>
-<pre class="prettyprint lang-php">
+				<pre>sudo service apache2 restart</pre>
+				<h2>Функции</h2>
+				<h3>iconv - изменение кодировки строки</h3>
+				<pre class="prettyprint lang-php">
 $s = 'Р’РёРЅРёР»РѕРІР°СЏ Р°РїРїР»РёРєР°С†РёСЏ РІ РЅРѕС‡РЅРѕРј РєР»СѓР±Рµ - С„Р»СЋРѕСЂ';
 $s = iconv('utf8', 'cp1251', $s);
 echo &quot;&lt;pre&gt;&quot;;
@@ -50,78 +54,46 @@ echo &quot;&lt;pre&gt;&quot;;
 var_dump($s);
 echo &quot;&lt;/pre&gt;&quot;;
 </pre>
-
-
-					<h2>PHP in console</h2>
-<pre class="prettyprint lang-php">
+				<h2>PHP in console</h2>
+				<pre class="prettyprint lang-php">
 php -r 'echo &quot;Hello&quot; . &quot; world&quot;;'
 </pre>
-
-
-					<h2>Комментирование</h2>
-<pre>&lt;!-- html  --&gt;&lt;?php // echo 'asd'; ?&gt;&lt;!--  html --&gt;
+				<h2>Наработки</h2>
+				<h3>Фильтрация данных пользователя</h3>
+				<p><strong>Коротко список используемых функций:</strong></p>
+				<ul>
+					<li><a href="http://php.net/manual/ru/function.intval.php">intval</a></li>
+					<li><a href="http://php.net/manual/ru/function.strip-tags.php">strip_tags</a></li>
+					<li><a href="http://php.net/manual/ru/function.htmlspecialchars.php">htmlspecialchars</a></li>
+				</ul>
+				<h4>Интеджер</h4>
+				<pre class="prettyprint lang-php">$number = intval($_GET['input_number']);
+if ($number)
+{
+... выполняем SQL запрос ...
+}</pre>
+				<h4>Стринг</h4>
+				<p>Не предполагаем вхождение html тегов:</p>
+				<pre class="prettyprint lang-php">$input_text = strip_tags($_GET['input_text']);
+$input_text = htmlspecialchars($input_text);
+$input_text = mysql_escape_string($input_text);
+</pre>
+				<p>Если сразу массив данных</p>
+				<pre>$checkbox_arr = array_map('intval', $_POST['checkbox']);</pre>
+				<h2>Комментирование</h2>
+				<pre>&lt;!-- html  --&gt;&lt;?php // echo 'asd'; ?&gt;&lt;!--  html --&gt;
 &lt;!-- html  --&gt;&lt;?php //= 'asd'; ?&gt;&lt;!--  html --&gt;</pre>
-
-
-				</div>
 			</div>
 		</div>
-		<!-- jQuery -->
-		<script src="//code.jquery.com/jquery.js"></script>
-		<!-- Bootstrap JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-        <!-- Подсветка синтаксиса кода -->
-        <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-        <!-- toc -->
-		<script type="text/javascript">
-			$(document).ready(function(){
-				$("#toc").append('<p>Содержание:</p>');
-				$("#toc").append('<ul></ul>');
-				$("h2").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h2" + i);
-					$("#toc").children("ul").append("<li><a id='linkh2" + i + "' href='#h2" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-				$("h3").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h3" + i);
-					var prevh2 = current.prevAll("h2").first();
-					var j = prevh2.attr("id").substring(2);
-					$("#linkh2"+j).next("ul").append("<li><a id='linkh3" + i + "' href='#h3" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-				$("h4").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h4" + i);
-					var prevh3 = current.prevAll("h3").first();
-					var j = prevh3.attr("id").substring(2);
-					alert
-					$("#linkh3"+j).next("ul").append("<li><a id='linkh4" + i + "' href='#h4" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-				$("h5").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h5" + i);
-					var prevh4 = current.prevAll("h4").first();
-					var j = prevh4.attr("id").substring(2);
-					$("#linkh4"+j).next("ul").append("<li><a id='linkh5" + i + "' href='#h5" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-				$("h6").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h6" + i);
-					var prevh5 = current.prevAll("h5").first();
-					var j = prevh5.attr("id").substring(2);
-					$("#linkh5"+j).next("ul").append("<li><a id='linkh6" + i + "' href='#h6" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-			});
-		</script>
-	</body>
+	</div>
+	<!-- jQuery -->
+	<script src="//code.jquery.com/jquery.js"></script>
+	<!-- Bootstrap JavaScript -->
+	<script type="text/javascript" src="../theme/bootstrap/js/bootstrap.min.js"></script>
+	<!-- Подсветка синтаксиса кода -->
+	<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+	<!-- TOC -->
+	<script src="../theme/toc/js/js.js" type="text/javascript"></script>
+</body>
+
 </html>
