--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -64,46 +64,63 @@
                         <kbd>Ctrl + Shift + A</kbd> - </li>
                 </ul>
                 <h2>Установленные плагины</h2>
-                <ul>
-                    <li><strong>Package Control</strong> — <a target="_blank" href="https://packagecontrol.io/installation">Package Control</a> =);</li>
-                    <li><strong>ApacheConf.tmLanguage</strong> — Apache Conf Syntax Highlighting - подсветка синтаксиса .htaccess;</li>
-                    <li><a href="#AutoFileName"><strong>AutoFileName</strong></a> — выпадающие списки для быстрого выбора и ввода пути к файлу в img[src] link[href]&#133;;</li>
-                    <li><strong>FuzzyFilePath</strong> — выпадающие списки файлов с почти нечетким поиском;</li>
-                    <li>CSS Extended Completions — выпадающие списки существующих стилей (нужно дабавить в кэш CSS файлы или всю папку по
-                        <kbd>ПКМ</kbd> в «сайдбаре» и наслаждаться);</li>
-                    <li><strong>CSS Format</strong> — упаковывает CSS или наоборот в удобочитаемый;</li>
-                    <li><strong>Emmet — обязательный плагин</strong> не нуждается в комментариях;</li>
-                    <li><strong><a href="#PyV8">PyV8</a></strong> — необходим для работы плагина Emmet,
-                        <del>устанавливается самостоятельно при установке Emmet</del>;</li>
-                    <li>Emmet CSS snippets — пока и без этого неплохо снипится все;</li>
-                    <li><strong>StringUtilities</strong> — HTML сущности в символы, наоборот и другие полезности;</li>
-                    <li><strong>Bootstrap 3 Snippets</strong> — A sublime plugin complete with Bootstrap 3 snippets;</li>
-                    <li><strong>Gist</strong>;</li>
-                    <li>Git – плагин для работы с Git через ST;</li>
-                    <li><strong><a href="#GitGutter">GitGutter</a></strong> — подсветка изменений в файле;</li>
-                    <li>Modific – тоже что и Git​Gutter;</li>
-                    <li><strong>Goto-CSS-Declaration</strong> — переход к классу в css файл;</li>
-                    <li><strong>Sublime-HTMLPrettify</strong> — оформление отступами, стоит вместе со следующим плагином, друг другу не мешают;</li>
-                    <li><strong>CodeFormatter</strong> — понятно для чего, немного по вкусу настроить и все;</li>
-                    <li><strong>SFTP</strong> — передача файлов через SSH, так что всё в порядке;</li>
-                    <li><strong>SideBarEnhancements</strong> — расширение функционала левого меню;</li>
-                    <li><strong>MoveTab</strong> — перемещение вкладок по горячей клавише;</li>
-                    <li><a href="#SublimeCodeIntel"><strong>SublimeCodeIntel</strong></a> — смотреть настройки, лишнее убрать: например HTML - с ним легко справляются другие плагины;</li>
-                    <li>Tag — закрывать тэг по /, отступы (автоматическая расстановка отступов просто ужасная)
-                        <del>использую</del> из-за отличной работы с атрибутами тегов;</li>
-                    <li><strong>View In Browser</strong> — открыть файл в браузере;</li>
-                    <li>sublime-yii-snippets (Yii Framework Snippets);</li>
-                    <li>SideBarGit —
-                        <del>прекрасный</del> плагин для работы с Git через ST (кому то может не понравиться что через мышь);</li>
-                    <li>rsub — править удаленные файлы через ssh;</li>
-                    <li>livestyle-sublime — рабочий плагин, но мне не очень нужен;</li>
-                    <li><strong>BracketHighlighter</strong> — подсветка парных скобок и тегов, и без него подсвечивается вроде как;</li>
-                    <li><a href="#Terminal">Sublime Terminal</a> – открывает терминал, текущий путь терминала такой же как и у редактируемого в Sublime Text файле;</li>
-                    <li><strong>DocBlockr</strong> – документирование /**
-                        <kbd>Tab</kbd>.</li>
-                </ul>
-                <h2>Настройки плагинов</h2>
-                <h3 id="Terminal">Terminal</h3>
+<h3><strong>Package Control</strong></h3>
+<p> — <a target="_blank" href="https://packagecontrol.io/installation">Package Control</a> =);</p>
+<h3><strong>ApacheConf.tmLanguage</strong></h3>
+<p> — Apache Conf Syntax Highlighting - подсветка синтаксиса .htaccess;</p>
+<h3><strong>AutoFileName</strong> img[src] link[href]&#133;;</h3>
+<p> — для пошагового ввода пути к файлу посредством выпадающих списков</p>
+<h3>FuzzyFilePath</h3>
+<p> — выпадающие списки файлов с почти нечетким поиском;</p>
+<h3>CSS Extended Completions</h3>
+<p> — выпадающие списки существующих стилей (нужно дабавить в кэш CSS файлы или всю папку по <kbd>ПКМ</kbd> в «сайдбаре» и наслаждаться);</p>
+<h3><strong>CSS Format</strong></h3>
+<p> — упаковывает CSS или наоборот в удобочитаемый;</p>
+<h3><strong>Emmet — обязательный плагин</strong></h3>
+<p> не нуждается в комментариях;</p>
+<h3><strong>PyV8</strong></h3>
+<p>Устанавливается "Почти" автоматически при установке Emmet; (необходим для работы плагина)</p>
+<h3>Emmet CSS snippets — пока и без этого неплохо снипится все;</h3>
+<h3><strong>StringUtilities</strong></h3>
+<p> — HTML сущности в символы, наоборот и другие полезности;</p>
+<h3><strong>Bootstrap 3 Snippets</strong></h3>
+<p> — A sublime plugin complete with Bootstrap 3 snippets;</p>
+<h3><strong>Gist</strong></h3>
+<h3>Git</h3>
+<p> – плагин для работы с Git через ST;</p>
+<h3><strong>GitGutter</strong></h3>
+<p> — подсветка изменений в файле;</p>
+<h3>Modific</h3>
+<p> – тоже что и Git​Gutter;</p>
+<h3><strong>Goto-CSS-Declaration</strong></h3>
+<p> — переход к классу в css файл;</p>
+<h3><strong>Sublime-HTMLPrettify</strong></h3>
+<p> — оформление отступами, стоит вместе со следующим плагином, друг другу не мешают;</p>
+<pre class="prettyprint lang-js">    &quot;indent_char&quot;: &quot;\t&quot;, // Indentation character
+...
+&quot;indent_size&quot;: 1, // Indentation size
+</pre>
+<h3><strong>CodeFormatter</strong></h3>
+<p> — понятно для чего, немного по вкусу настроить и все;</p>
+<h3><strong>SFTP</strong></h3>
+<p> — передача файлов через SSH, так что всё в порядке;</p>
+<h3><strong>SideBarEnhancements</strong></h3>
+<p> — расширение функционала левого меню;</p>
+<h3><strong>MoveTab</strong></h3>
+<p> — перемещение вкладок по горячей клавише;</p>
+<h3><strong>SublimeCodeIntel</strong></h3>
+<p> — смотреть настройки, лишнее убрать: например HTML - с ним легко справляются другие плагины;</p>
+<h3>Tag — закрывать тэг по /, отступы (автоматическая расстановка отступов просто ужасная) <del>использую</del> из-за отличной работы с атрибутами тегов;</h3>
+<h3><strong>View In Browser</strong></h3>
+<p> — открыть файл в браузере;</p>
+<h3>sublime-yii-snippets (Yii Framework Snippets);</h3>
+<h3>SideBarGit — <del>прекрасный</del> плагин для работы с Git через ST (кому то может не понравиться что через мышь);</h3>
+<h3>rsub — править удаленные файлы через ssh;</h3>
+<h3>livestyle-sublime — рабочий плагин, но мне не очень нужен;</h3>
+<h3><strong>BracketHighlighter</strong></h3>
+<p> — подсветка парных скобок и тегов, и без него подсвечивается вроде как;</p>
+<h3><a href="#Terminal">Sublime Terminal</a> – открывает терминал, текущий путь терминала такой же как и у редактируемого в Sublime Text файле;</h3>
+                <h4>Настройки</h4>
                 <p>Настройки в файле <code>C:\Users\maksim\AppData\Roaming\Sublime Text 3\Packages\User\Terminal.sublime-settings</code>, для терминала MINGW32 поставляемого c «<a href="http://git-scm.com/">Домашней страницы проекта Git</a>»:</p>
                 <pre>
 "terminal": "C:\\Program Files (x86)\\Git\\bin\\sh.exe",
@@ -116,6 +133,13 @@
                 <pre>
 "terminal": "C:\\cygwin64\\bin\\mintty.exe",
 "parameters": ["-i", "C:\\cygwin64\\Cygwin-Terminal.ico"],</pre>
+<h3><strong>DocBlockr</strong></h3>
+<p> – документирование <code>/**</code><kbd>Tab</kbd>.</p>
+
+
+
+
+
                 <h3 id="AutoFileName">AutoFileName</h3>
                 <p>Плагин имеет недостаток, под виндой не определяет коренвую папку проекта и после печати слэша <code>img src="/"</code> в выпадающем списке представлены список имен жестких дисков C:/, D:/…</p>
                 <p>Однако плагин позволяет манипулировать относительными путями что немного спасает ситуацию.</p>
