--- a/linux/all.html
+++ b/linux/all.html
@@ -27,7 +27,11 @@
 
 synaptic - менеджер пакетов
 
-
+<h2>Console</h2>
+<h3>show</h3>
+<p><code>export PS1='$(whoami)@$(hostname):$(pwd)$ '</code></p>
+<p>or</p>
+<p><code>export PS1='$(whoami)@$(hostname):$(pwd)'</code></p>
 	<h2>Unix команды</h2>
 
 <h3>ls</h3>
