--- a/htaccess/all.html
+++ b/htaccess/all.html
@@ -58,8 +58,12 @@
 # Первостепенность поиска индексных файлов при указании директории
 DirectoryIndex index.php index.html
 
-# Запрещает (-Indexes) или разрешает (+Indexes) отображение содеримого директории.
+#Запрещает (-Indexes) или разрешает (+Indexes) отображение содеримого директории, тоже для симилинков:
 Options -Indexes
+
+# Если системный администратор запрещает использование 'Options +FollowSymlinks' — не сможем ограничить использование mod_rewrite для отдельных каталогов, вместо этого изменения будут действовать на весь сервер.
+# если с этой директивой выдает ошибку - комментируем (в зависимости от хостера)
+Options +FollowSymlinks
 
 # ######################################
 # ##                                  ##
@@ -145,10 +149,6 @@ php_flag html_errors on
 
 	# Включаем модуль mod_rewrite выполняющий URL преобразования на лету.
 	RewriteEngine on
-
-	# Если системный администратор запрещает использование 'Options +FollowSymlinks' — не сможем ограничить использование mod_rewrite для отдельных каталогов, вместо этого изменения будут действовать на весь сервер.
-	# если с этой директивой выдает ошибку - комментируем (в зависимости от хостера)
-	Options +FollowSymlinks
 
 	# Устанавливает базовый URL для преобразований в каталоге.
 	RewriteBase /
