--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -78,6 +78,8 @@
                         <kbd>Ctrl + Shift + G</kbd> - </li>
                     <li>
                         <kbd>Ctrl + Shift + A</kbd> - </li>
+                    <li>
+                        <kbd>Ctrl + J</kbd> - добавить следующую строку (с вычетом отступа следующей строки) к текущей через пробел</li>
                 </ul>
                 <h2>Плагины</h2>
                 <h3><strong>Package Control</strong></h3>
