--- a/linux/mint/all.html
+++ b/linux/mint/all.html
@@ -23,7 +23,29 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<h1 class="text-center">Linux Mint All</h1>
+
+
 					<div id="toc"></div>
+
+<p>
+	<a href="http://bashrcgenerator.com/">http://bashrcgenerator.com/</a>
+</p>
+https://www.opennet.ru/docs/RUS/bash_scripting_guide/x13621.html
+https://www.midnight-commander.org/wiki/ru/doc/editor/hotkeys
+http://superuser.com/questions/461452/is-there-a-way-to-change-shortcuts-in-midnight-commander
+http://ss64.com/bash/touch.html
+http://askubuntu.com/questions/161249/bashrc-not-executed-when-opening-new-terminal
+https://www.opennet.ru/tips/1408_bash_shell.shtml
+<pre>
+
+#!/bin/bash
+#export PS1="\[\033[38;5;11m\]\u\[$(tput sgr0)\]\[\033[38;5;15m\]@\h:\[$(tput sgr0)\]\[\033[38;5;6m\][\w]:\[$(tput sgr0)\]\[\033[38;5;15m\] \[$(tput sgr0)\]"
+export PS1='$(whoami)@$(hostname):$(pwd)$ '
+if [[ -n $SSH_CONNECTION ]] ; then
+    echo "I'm logged in remotely"
+fi
+</pre>
+
 					<h2>Параметры системы</h2>
 					<h3>Клавиатура</h3>
 					<h4>Комбинации клавишь</h4>
